wip: moore sentence defence of CiB

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -557,10 +557,17 @@ In the case of false beliefs, suppose Bob is an early bird in 1948 America, and 
  
  Thus, we have provided an interpretation of the possibility relations underlying knowledge and belief, which is not often done in the literature. We now present our theory's notion of justification and its response to skepticism.
  
- \subsection{Justification and Skepticism}\label{sec:just_skep}
- Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathscr{S}4$ as the static base epistemic logic, and interpret knowledge as in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{Confidence in Belief}.
+ \subsection{Justification}\label{sec:just}
+ Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathcal{S}4$ as the static base epistemic logic, and interpret knowledge in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{Confidence in Belief}.
  
-Recall \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.} This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). Finally, this account allows us to address the problem of logical omni
+Recall \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.}. This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). Finally, the distinction this theory draws between objective and subject perspectives helps account for powerful intuitions about knowledge.
+
+As a balance between the normative and descriptive, this theory achieves a plausible and desireable trade off. If an agent forms a belief that $\varphi$ while having defeating evidence directly accessible to her, we are right to criticize her for forming and continuing to hold the belief. This follows the tradition set by Hintikka that the intuitive standard for evaluating formulas of epistemic logic is rational defensibility. On this ground, the axiom is intuitively plausible as a normative claim. 
+
+The sentences used to test intuitive validity are sometimes called Moorean sentence, of the form, ``$\varphi$, but I do not know that $\varphi$." The apparent absurdity of such a sentence is belied by the lack of a formal contradiction. Hintikka resolves this issue by defending that claim that when honest agents proclaim sentences, minimally, they believe them to be true. So when such a sentence is uttered, it is equivalent to a formula $\Bels{i}\varphi \tland \Bels{i}\tlnot\Kns{i}\varphi.$  From this, we can deduce a contradiction if we assume \emph{Confidence in Belief}.
+
+$\Bels{i}\tlnot\Kns{i}\varphi$ implies $\BPoss{i}\tlnot\Kns{i}\varphi$, which is equivalent to $\tlnot\Bels{i}\Kns{i}\varphi$. Thus, we have $\Bels{i}\varphi$ and $\tlnot\Bels{i}\Kns{i}\varphi$. However, from the former, and the axiom of \emph{Confidence in Belief}, $\Bels{i}\Kns{i}\varphi$ holds. Thus, we have a contradiction. The fact that the axiom schema helps explain the absurdity of the Moore sentence lends philosophical support to its being a normative constraint on belief. The fact that the constraint is a subjective one, \emph{i.e.} relative to an agent's subjectively available evidence, makes it a realistically achievable idealization, unlike positive and negative introspection of knowledge.
+%Finally, this account allows us to address the problem of logical omniscience.
 
 %However, we also capture an externalist notion of epistemic justification. We identify the justification of a proposition with the objectively available evidence. Thus, we distinguish two notions of justification, each of which various philosophers endorse: an internalist notion based on the subjectively available evidence, and an externalist notion, based on the objectively available evidence. The former is responsible for justifying beliefs, while the latter justifies propositions. The remaining debate among internalists and externalists amounts to 
  
@@ -568,7 +575,7 @@ Recall \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\v
 
 %We leave the notions of ``source of information existing", ``support for propositions", and ``immediate mental awareness" unanalyzed, but trust that they are sufficiently familiar concepts for the reader. They articulate the difference between experimental support published in a peer-reviewed journal article that supports a proposition, and an agent reading and believing the evidence in the article. In the former case, her epistemically possible worlds will include some in which the proposition is true, while in the latter case, her doxastically possible worlds will all come to satisfy the proposition. If she reads the article and uses it to update her beliefs according to some probabilistic account, perhaps the some doxastically worlds satisfy the proposition, while others do not, but she now considers the proposition possibly true. It was epistemically possible for her so long as there never has been objectively available evidence ruling it out, but it became doxastically possible for her once the evidence became subjectively available to her.
 
-This still leaves the problem of logical omniscience to be addressed. It gets generated for our logic specifically in the following way. All propositional tautologies are theorems of the logic. By the rule of $\Kns{i}$ Necessitation, all theorems are known. The Distribution Axiom of $\Kns{i}$ over implication says if a theorem is known, and $i$ knows that the theorem $\varphi$ implies $\psi$, then $i$ knows $\psi$. Since knowledge implies belief, $\Bels{i}\psi$. Thus, $i$ knows and believes every mathematical theorem. Our solution depends on a function that partitions the set of atomic propositions into an \emph{active} set and an \emph{inactive} set.
+Recall that the problem of logical omniscience is that all propositional tautologies are theorems of the logic, and by the rule of $\Kns{i}$ Necessitation, all theorems are known. The Distribution Axiom of $\Kns{i}$ over implication says if a theorem is known, and $i$ knows that the theorem $\varphi$ implies $\psi$, then $i$ knows $\psi$. Since knowledge implies belief, $\Bels{i}\psi$. Thus, $i$ knows and believes every mathematical theorem. Our solution depends on a function that partitions the set of atomic propositions into an \emph{active} set and an \emph{inactive} set. This activation function constructs a model with atomic propositions that the agent considers relevant. It has the effect of constraining $AtProp$ to a finite subset of its original self. 
 
 \begin{definition}[Active Set]~\label{active_set}
 	\emph{For a model $M$ with set of atomic propositions} $AtProp$\emph{, the active set} active  $\stackrel{def}{=} \{p\  |\  p \in AtProp \aand \mathit{activate(p)} = \mathit{True}\}$.
@@ -586,7 +593,7 @@ Furthermore, we can deny the problematic part of the problem of logical omniscie
 
 \section{Indistinguishibility Satisfied}\label{sec:indist}
 
-Many find it intuitive to speak of the epistemic relation as an equivalence or indistinguishability relation, which requires it be symmetric. Symmetry, combined with the reflexivity underlying the Truth Axiom and transitivity of positive introspection, yields such an equivalence relation. It makes sense to say that world $v$ is epistemically possible from world $w$ for agent $i$ if $i$ cannot tell the two worlds apart, \emph{i.e.} they are indistinguishable. The power of this intuitive appeal presents a challenge for us. We must show that our axiom schema can satisfy the intuition behind epistemic indistinguishability without imposing symmetry on the epistemic relation.
+Many find it intuitive to speak of the epistemic relation as an equivalence or indistinguishability relation, which requires it be an equivalence relation. Euclidicity, combined with the reflexivity underlying the Truth Axiom and transitivity of positive introspection, yields such an equivalence relation. It makes sense to say that world $v$ is epistemically possible from world $w$ for agent $i$ if $i$ cannot tell the two worlds apart, \emph{i.e.} they are indistinguishable. The power of this intuitive appeal presents a challenge for us. We must show that our axiom schema can satisfy the intuition behind epistemic indistinguishability without imposing symmetry on the epistemic relation.
 
 The key to achieving this is through the composition of the doxastic relation with the epistemic relation. From a first person perspective, our model does collapse belief and knowledge together. That means that an agent cannot distinguish her mere beliefs from her genuine knowledge. Let $\Rel{k/b}^i(w)$ denote the extension of the epistemic/doxastic relation of $w$. We also define the following mathematical notion on the relations.
 
