--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -51,6 +51,9 @@
 	 	\bibitem{johnson_butler_fm}
 	 	Butler, R.; Johnson, S. Formal Methods For Life-Critical Software. \emph{Computing in Aerospace 9 Conference}, (pp. 319-329), San Diego, CA. October 1993.
 	 	
+	 	\bibitem{Lob}
+	 	L\"ob, M. Solution of a Problem of Leon Henkin. {\em Journal of Symbolic Logic} 20 (2), 115 - 118. (1955).
+	 	
 	 	\bibitem{davisputnam}
 	 	Davis, M.; Putnam, H. "A Computing Procedure for Quantification Theory". J.ACM. 7 (3): 201–215. (1960).
 	 	
