--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -232,7 +232,7 @@ The definitions of the dynamic modalities make use of a relation between two mod
     $\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
     &\\
     $\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
-    $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Confidence in Belief\\
+    $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Evidential Restraintf\\
 %    $\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
 	&\\
     $\Pal{A,\laa}p \iiff post(\laa, pre(\laa))(p)$ & Atomic Consequence\\
@@ -299,7 +299,7 @@ Recall the static base of \DASL.
 			$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
 			&\\
 			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
-			$\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Confidence in Belief\\
+			$\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Evidential Restraint\\
 			&\\
 %			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
 			From $\vdash \varphi$ and $\vdash \varphi \iimplies \psi$, infer $\vdash\psi$ & Modus Ponens\\
@@ -424,17 +424,17 @@ The problem for an epistemic logician constructing a formal theory is to select 
 
 
 
-%As with Hintikka's work, the test of an epistemic logic's adequacy is its ability to correctly handle touchstone cases from the philosophical literature, or better yet, to adequately explain problems that currently lack convincing explanations. For example, the so-called Moore's sentence is a problem pervasive in epistemology and the philosophy of language, attributed to G.E. Moore~\cite{Moore} by Wittgenstein~\cite{Wittgenstein}. The standard Moore's paradox to be solved is a statement of the form,
-%\begin{center}
-%	\emph{$\varphi$, but I don't believe that $\varphi$.}
-%\end{center}
+As with Hintikka's work, the test of an epistemic logic's adequacy is its ability to correctly handle touchstone cases from the philosophical literature, or better yet, to adequately explain problems that currently lack convincing explanations. For example, the so-called Moore's sentence is a problem pervasive in epistemology and the philosophy of language, attributed to G.E. Moore~\cite{Moore} by Wittgenstein~\cite{Wittgenstein}. The standard Moore's paradox to be solved is a statement of the form,
+\begin{center}
+	\emph{$\varphi$, but I don't believe that $\varphi$.}
+\end{center}
 
-%The alleged paradox of Moorean sentences is that they are not formal contradictions, but they nonetheless seem like they should be. Hintikka solves this problem by first asserting that his logic is meant for actual communicated statements, not merely sentences, and he distinguishes three new types of implication under study: virtual, epistemic, and doxastic. All implications are established by checking for a model where the antecedent is satisfiable while the consequent is falsifiable. If no such model is possible, then the implication is established. Virtual implication refers to checking for satisfiability of the negated implication in a model. Epistemic implication refers to checking for satisfiability of the negated implication with a knowledge operator distributed over it, and similarly for doxastic implication. Thus, Hintikka solves Moore's paradox by searching for a model that satisfies the above statement. Such a statement is falsifiable, and so virtual implication from $\varphi$ to $\Bels{i}\varphi$ fails. Hintikka turns then to doxastic implication, which involves distributing $\Bels{i}$ over the implication under inspection:
-%\begin{center}
-%	$\Bels{i}\varphi \tland \tlnot \Bels{i}\Bels{i}\varphi$.
-%\end{center}
+The alleged paradox of Moorean sentences is that they are not formal contradictions, but they nonetheless seem like they should be. Hintikka solves this problem by first asserting that his logic is meant for actual communicated statements, not merely sentences, and he distinguishes three new types of implication under study: virtual, epistemic, and doxastic. All implications are established by checking for a model where the antecedent is satisfiable while the consequent is falsifiable. If no such model is possible, then the implication is established. Virtual implication refers to checking for satisfiability of the negated implication in a model. Epistemic implication refers to checking for satisfiability of the negated implication with a knowledge operator distributed over it, and similarly for doxastic implication. Thus, Hintikka solves Moore's paradox by searching for a model that satisfies the above statement. Such a statement is falsifiable, and so virtual implication from $\varphi$ to $\Bels{i}\varphi$ fails. Hintikka turns then to doxastic implication, which involves distributing $\Bels{i}$ over the implication under inspection:
+\begin{center}
+	$\Bels{i}\varphi \tland \tlnot \Bels{i}\Bels{i}\varphi$.
+\end{center}
 
-%This is justified by the principle that people normally believe what they assert as statements. Hintikka's doxastic logic has a transitive doxastic relation, so it takes positive introspection about belief as an axiom, and therefore the above formalization is not satisfiable in a model (and so is doxastically implied). 
+This is justified by the principle that people normally believe what they assert as statements. Hintikka's doxastic logic has a transitive doxastic relation, so it takes positive introspection about belief as an axiom, and therefore the above formalization is not satisfiable in a model (and so is doxastically implied). 
 
 \paragraph{3. Formal Properties}
 
@@ -454,7 +454,7 @@ where $\models\varphi$ is semantic validity of $\varphi$ and $\vdash\varphi$ is 
 \subparagraph{Avoid $\mathbf{KB}$ Collapse}
 Knowledge and belief are distinct. There are two distinguishing characteristics between them. The first is that belief and knowledge sit in a part-whole relationship to each other. $i$ knows that $\varphi$ only if $i$ believes that $\varphi$, with other necessary conditions that are jointly sufficient. The second is that knowledge of a proposition requires that the known proposition be true, while belief requires no such truth condition. If an epistemic logic with operators for belief and knowledge collapses them into equivalence, such that $\Bels{i}\varphi \iiff \Kns{i}\varphi$, it has gone wrong, and is not acceptable.
 
-An offending theorem flagged in the literature as responsible for equivalence collapse is $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which is our axiom \emph{Confidence in Belief}. We must show that our system avoids $\Kns{}\Bels{}$ collapse.
+An offending theorem flagged in the literature as responsible for equivalence collapse is $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which is our axiom \emph{Evidential Restraint}. We must show that our system avoids $\Kns{}\Bels{}$ collapse.
 
 \subparagraph{Indistinguishability}
 Many find it intuitive to speak of the epistemic relation as an equivalence or indistinguishability relation, which requires it to be symmetric, transitive, and reflexive. The epistemic relation in S5 is Euclidean and reflexive, which together yield symmetry and transitivity, and therefore an equivalence relation. Equivalence relations satisfy and indistinguishability relation because each world in the equivalence class is indistinguishable from each other relative to the relation defining the class. We must show that our axiom schema can satisfy the intuition behind epistemic indistinguishability.
@@ -503,14 +503,14 @@ We proceed now to our arguments that \DASL's static base fares well on these cou
 %In Rushby's alternative model, he discusses a pilot's discernment of the presence of instrument conflict, which he assumes for simplicity to be always accurate. Is this not an assumption of knowledge for simplicity? Similarly, when the pilot is aware of the autopilot status through observing an indicator on a display or through inference from the aircraft's behavior, it is not clear that this is not a case of knowing the autopilot's status. Rushby's description of the true belief seems to make it fit with any epistemologist's theory of knowledge. 
 
 %\subsubsection*{Knowledge and Belief Axioms}
-%Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}. Knowledge is almost universally formalized as an \SFive\ modal operator, including axiom schema for positive and negative introspection. Rushby suspects that because the analyses of aviation mishaps lays the blame on a failure of negative introspection in~\cite{AhrenbachGoodloe}, the decision to exclude the negative introspection axiom from the schema appears contrived. Rushby proves that to include the negative introspection axiom would cause a collapse of knowledge and belief into equivalence, due to the axiom \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which to our knowledge was first proved by Lenzen~\cite{Lenzen}. \emph{Confidence in Belief}, additionally, is the converse of Hintikka's choice for relating the two: $\Bels{i}\Kns{i}\varphi \iimplies \Bels{i}\varphi$. Axiom \emph{Confidence in Belief} will be defended below. Rushby's concern with the knowledge axioms, or lack thereof, can be summarized as follows.
+%Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}. Knowledge is almost universally formalized as an \SFive\ modal operator, including axiom schema for positive and negative introspection. Rushby suspects that because the analyses of aviation mishaps lays the blame on a failure of negative introspection in~\cite{AhrenbachGoodloe}, the decision to exclude the negative introspection axiom from the schema appears contrived. Rushby proves that to include the negative introspection axiom would cause a collapse of knowledge and belief into equivalence, due to the axiom \emph{Evidential Restraint}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which to our knowledge was first proved by Lenzen~\cite{Lenzen}. \emph{Evidential Restraint}, additionally, is the converse of Hintikka's choice for relating the two: $\Bels{i}\Kns{i}\varphi \iimplies \Bels{i}\varphi$. Axiom \emph{Evidential Restraint} will be defended below. Rushby's concern with the knowledge axioms, or lack thereof, can be summarized as follows.
 %
 %\begin{enumerate}
 %	\item Negative introspection is a standard axiom for epistemic logic.
-%	\item \emph{Confidence in Belief} is non-standard for multi-modal epistemic-doxastic logics.
-%	\item Including negative introspection and excluding \emph{Confidence in Belief} preserves an analysis based on false beliefs that is analytically sufficient.
+%	\item \emph{Evidential Restraint} is non-standard for multi-modal epistemic-doxastic logics.
+%	\item Including negative introspection and excluding \emph{Evidential Restraint} preserves an analysis based on false beliefs that is analytically sufficient.
 %	\item Standard axioms are preferable to non-standard axioms when standard axioms are analytically sufficient.
-%	\item Therefore, including negative introspection and excluding \emph{Confidence in Belief} is preferable to excluding and including respectively.
+%	\item Therefore, including negative introspection and excluding \emph{Evidential Restraint} is preferable to excluding and including respectively.
 %\end{enumerate}
 
 %Our representation of the argument here is based directly on Rushby's claims in CITE for premises 1 through 3, but premise 4 is inferred from context and was not explicitly mentioned. However, in order for the argument to be deductively valid, the premise must be included. We take it to be an unstated assumption behind Rushby's reasoning.
@@ -558,15 +558,15 @@ In the case of false beliefs, suppose Bob is an early bird in 1948 America, and 
  Thus, we have provided an interpretation of the possibility relations underlying knowledge and belief, which is not often done in the literature. We now present our theory's notion of justification and its response to skepticism.
  
  \subsection{Justification}\label{sec:just}
- Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathcal{S}4$ as the static base epistemic logic, and interpret knowledge in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{Confidence in Belief}.
+ Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathcal{S}4$ as the static base epistemic logic, and interpret knowledge in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{dence in Belief}.
  
-Recall \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.}. This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). Finally, the distinction this theory draws between objective and subject perspectives helps account for powerful intuitions about knowledge.
+Recall \emph{Evidential Restraint}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.}. This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). Finally, the distinction this theory draws between objective and subject perspectives helps account for powerful intuitions about knowledge.
 
 As a balance between the normative and descriptive, this theory achieves a plausible and desireable trade off. If an agent forms a belief that $\varphi$ while having defeating evidence directly accessible to her, we are right to criticize her for forming and continuing to hold the belief. This follows the tradition set by Hintikka that the intuitive standard for evaluating formulas of epistemic logic is rational defensibility. On this ground, the axiom is intuitively plausible as a normative claim. 
 
-The sentences used to test intuitive validity are sometimes called Moorean sentence, of the form, ``$\varphi$, but I do not know that $\varphi$." The apparent absurdity of such a sentence is belied by the lack of a formal contradiction. Hintikka resolves this issue by defending that claim that when honest agents proclaim sentences, minimally, they believe them to be true. So when such a sentence is uttered, it is equivalent to a formula $\Bels{i}\varphi \tland \Bels{i}\tlnot\Kns{i}\varphi.$  From this, we can deduce a contradiction if we assume \emph{Confidence in Belief}.
+Recall the sentences used to test intuitive validity, called Moorean sentences, of the form, ``$\varphi$, but I do not know that $\varphi$." The apparent absurdity of such a sentence is belied by the lack of a formal contradiction. Hintikka resolves this issue by defending that claim that when honest agents proclaim sentences, minimally, they believe them to be true. So when such a sentence is uttered, it is equivalent to a formula $\Bels{i}\varphi \tland \Bels{i}\tlnot\Kns{i}\varphi.$  From this, we can deduce a contradiction if we assume \emph{Evidential Restraint}.
 
-$\Bels{i}\tlnot\Kns{i}\varphi$ implies $\BPoss{i}\tlnot\Kns{i}\varphi$, which is equivalent to $\tlnot\Bels{i}\Kns{i}\varphi$. Thus, we have $\Bels{i}\varphi$ and $\tlnot\Bels{i}\Kns{i}\varphi$. However, from the former, and the axiom of \emph{Confidence in Belief}, $\Bels{i}\Kns{i}\varphi$ holds. Thus, we have a contradiction. The fact that the axiom schema helps explain the absurdity of the Moore sentence lends philosophical support to its being a normative constraint on belief. The fact that the constraint is a subjective one, \emph{i.e.} relative to an agent's subjectively available evidence, makes it a realistically achievable idealization, unlike positive and negative introspection of knowledge.
+$\Bels{i}\tlnot\Kns{i}\varphi$ implies $\BPoss{i}\tlnot\Kns{i}\varphi$, which is equivalent to $\tlnot\Bels{i}\Kns{i}\varphi$. Thus, we have $\Bels{i}\varphi$ and $\tlnot\Bels{i}\Kns{i}\varphi$. However, from the former, and the axiom of \emph{Evidential Restraint}, $\Bels{i}\Kns{i}\varphi$ holds. Thus, we have a contradiction. The fact that the axiom schema helps explain the absurdity of the Moore sentence lends philosophical support to its being a normative constraint on belief. The fact that the constraint is a subjective one, \emph{i.e.} relative to an agent's subjectively available evidence, makes it a realistically achievable idealization, unlike positive and negative introspection of knowledge.
 %Finally, this account allows us to address the problem of logical omniscience.
 
 %However, we also capture an externalist notion of epistemic justification. We identify the justification of a proposition with the objectively available evidence. Thus, we distinguish two notions of justification, each of which various philosophers endorse: an internalist notion based on the subjectively available evidence, and an externalist notion, based on the objectively available evidence. The former is responsible for justifying beliefs, while the latter justifies propositions. The remaining debate among internalists and externalists amounts to 
@@ -1078,7 +1078,7 @@ For completeness, it suffices to show that each static \DASL\ axiom schema is a 
 %			%			$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$ & Positive Belief Introspection \\
 %			$\BPoss{i}\Bels{i}\varphi \iimplies \Bels{i}\varphi$ & (Sahlqvist) Negative Belief Introspection\\
 %			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
-%			$\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Confidence in Belief\\
+%			$\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Evidential Restraint\\
 %			%			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
 %			From $\vdash \varphi$ and $\vdash \varphi \iimplies \psi$, infer $\vdash\psi$ & Modus Ponens\\
 %			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
