--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -1478,7 +1478,7 @@ Proofs for $\mathbf{Action\ and\ Belief}$ through $\mathbf{Safe\ Action\ and\ Be
 
 \end{proof}
 
-Thus, the dynamic extension inherits soundness and completeness from those of the static base. We proceed now to the philosophical justification of the dynamic extension, specifically the axiom schemas of \emph{Inevitability} and \emph{Minimum Rationality}.
+Thus, the dynamic extension inherits soundness and completeness from the static base. We proceed now to the philosophical justification of the dynamic extension, specifically the axiom schemas of \emph{Inevitability} and \emph{Minimum Rationality}.
 
 \subsection{Inevitability and Minimum Rationality}\label{sec:dyn_ext}
 
